# SynCoPa

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  .syncopa.desktop  CMakeLists.txt  README.md  appimage-run.sh  create-appimage.sh
src/: CMakeLists.txt  ConnectivityTree.cpp  ConnectivityTree.h  DataExport.cpp  DataExport.h  DomainManager.cpp  DomainManager.h  DynamicPathGenerator.cpp  DynamicPathGenerator.h  DynamicPathManager.cpp  DynamicPathManager.h  Events.h  GradientWidget.cpp  GradientWidget.h  MainWindow.cpp  MainWindow.h  NeuronCluster.cpp  NeuronCluster.h  NeuronClusterManager.cpp  NeuronClusterManager.h  NeuronClusterView.cpp  NeuronClusterView.h  NeuronClusterViewTitle.cpp  NeuronClusterViewTitle.h  NeuronMetadata.cpp  NeuronMetadata.h  NeuronScene.cpp  NeuronScene.h  NeuronSelectionView.cpp  NeuronSelectionView.h  OpenGLWidget.cpp  OpenGLWidget.h  PSManager.cpp  PSManager.h  PaletteColorWidget.cpp  PaletteColorWidget.h  ParticleManager.cpp  ParticleManager.h  PathFinder.cpp  PathFinder.h  (+16 more)
src/ext/: ctkrangeslider.cpp
src/particlelab/: DynamicModel.cpp  DynamicModel.h  DynamicPathParticle.cpp  DynamicPathParticle.h  ParticleLabShaders.h  StaticGradientModel.cpp  StaticGradientModel.h  StaticModel.cpp  StaticModel.h  SynapseParticle.cpp  SynapseParticle.h
src/prefr/: CMakeLists.txt  Camera.cpp  Camera.h  MobilePolylineSource.cpp  MobilePolylineSource.h  PrefrShaders.h  ShaderProgram.cpp  ShaderProgram.h  SourceMultiPosition.cpp  SourceMultiPosition.h  UpdaterMappedValue.cpp  UpdaterMappedValue.h  UpdaterStaticPosition.cpp  UpdaterStaticPosition.h  branching.cpp  ogl.cpp  prefrStatic.cpp  projectionTest.cpp  renderToTexture.cpp  softParticles.fs
